@@ -21,8 +21,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <java.release>16</java.release>
         <jackson.version>2.12.0-rc2</jackson.version>
         <guice.version>4.2.3</guice.version>
         <fastutil.version>8.3.1</fastutil.version>
@@ -88,9 +87,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                    <source>15</source>
-                    <target>15</target>
+                    <release>${java.release}</release>
                 </configuration>
             </plugin>
         </plugins>
